Off-chain data in notebook

--- a/exercise.ipynb
+++ b/exercise.ipynb
@@ -104,6 +104,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Properties"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "We start by building a basic Federated Learning system using a centralized server component. As we explained in the tutorial, we cannot trust it."
    ]
   },
@@ -148,10 +155,10 @@
      "output_type": "stream",
      "text": [
       "Centralized Federated Learning\n",
-      "Properties: untrusted, privacy-preserving, unscalable\n",
+      "Properties: privacy-preserving\n",
       "Components:\n",
-      "Aggregation: Centralized Server (untrusted)\n",
-      "Models Storage: Centralized Server (untrusted)\n",
+      "Aggregation: Empty ()\n",
+      "Models Storage: Empty ()\n",
       "\n"
      ]
     }
@@ -168,13 +175,70 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You should obtain the following properties: \"untrusted\", \"privacy-preserving\" and \"unscalable\".\n",
-    "Now let's see what happens if the centralized server is compromised."
+    "You should obtain the following properties: \"untrusted\", \"privacy-preserving\" and \"unscalable\"."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Implementation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's have a closer look at how it really works in practice.\n",
+    "In the next cell, we will code the client side of a step of Federated Learning.\n",
+    "You are provided with some (private) data, a function train producing a new model, and a function send communicating with the server.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def client_federated_learning(data, train, send):\n",
+    "    \"\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, we will implement the server side of a step of Federated Learning. You are provided with a function receive to get the models from the clients, a function to send to the clients and a function aggregate to combine them into a new model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def server_federated_learning(aggregate, receive, send):\n",
+    "    \"\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Limitations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We imagine that we have a full implementation of a Federated Learning system using a centralized server. \n",
+    "Now let's see what happens if the centralized server is compromised."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -206,10 +270,10 @@
      "output_type": "stream",
      "text": [
       "Centralized Federated Learning\n",
-      "Properties: untrusted, privacy-leaking\n",
+      "Properties: privacy-preserving\n",
       "Components:\n",
-      "Aggregation: Centralized Server (untrusted, corrupted)\n",
-      "Models Storage: Centralized Server (untrusted, corrupted)\n",
+      "Aggregation: Empty ()\n",
+      "Models Storage: Empty ()\n",
       "\n"
      ]
     }
@@ -230,7 +294,258 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Blockchain is proposed as a solution to enhance the reliability of Federated Learning systems. It provides a decentralized and tamper-proof ledger that can be used to store the aggregated model and the updates from the clients."
+    "#### Properties"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Blockchain is proposed as a solution to enhance the reliability of Federated Learning systems. It provides a decentralized and tamper-proof ledger that can be used to store the aggregated model and the updates from the clients. Let's see its properties."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Blockchain Example\n",
+      "Properties: trusted\n",
+      "Components:\n",
+      "Consensus: Empty ()\n",
+      "Transactions: Empty ()\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from src.system_base import Blockchain\n",
+    "\n",
+    "blockchain = Blockchain(\"Blockchain Example\", {\n",
+    "        \"Consensus\": empty,\n",
+    "        \"Transactions\": empty\n",
+    "    })\n",
+    "blockchain.display()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Implementation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Limitations\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. Blockchain based Federated Learning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4. Off-chain Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The blockchain based Federated Learning solution is not enough to solve all the problems. This design is not scalable, as the blockchain is not designed to store large amounts of data.\n",
+    "We need to store the data off-chain, while still ensuring that the data is tamper-proof and can be trusted."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Properties"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will use a decentralized storage system to store the data off-chain. This system will be used to store the data in a tamper-proof way, while still allowing the clients to access the data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Distributed Storage (scalable, unavailable)'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from src.system_base import DistributedStorage\n",
+    "\n",
+    "distributed_storage = DistributedStorage()\n",
+    "distributed_storage.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This system is unavailable, as we cannot guarantee that the data stored is kept by a server that is alive.\n",
+    "This is problematic when combined with a blockchain, because clients may never receive the new model they need to train.\n",
+    "Try to see what happens when you use a blockchain based Federated Learning system with an off-chain data storage system."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "External Storage Federated Learning\n",
+      "Properties: scalable, trusted, unavailable, privacy-preserving\n",
+      "Components:\n",
+      "Aggregation: Blockchain Example (trusted)\n",
+      "Models Storage: Distributed Storage (scalable, unavailable)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "external_storage_fl = FederatedLearning(\"External Storage Federated Learning\", {\n",
+    "        \"Aggregation\": empty,\n",
+    "        \"Models Storage\": empty\n",
+    "    })\n",
+    "external_storage_fl.display()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can provide the missing properties using availability and integrity proofs (PoA&I). These proofs are stored on the blockchain."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "poai = Component(\"POAI\", [\"data-available\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, you need to combine these proofs, the off-chain data storage system, and the blockchain based Federated Learning system to build a complete system that is reliable, scalable, and tamper-proof."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "POAI Blockchain\n",
+      "Properties: data-available, trusted\n",
+      "Components:\n",
+      "Consensus: Empty ()\n",
+      "Transactions: POAI (data-available)\n",
+      "\n",
+      "hey\n",
+      "POAI Federated Learning\n",
+      "Properties: privacy-preserving, scalable, trusted, available\n",
+      "Components:\n",
+      "Aggregation: POAI Blockchain (data-available, trusted)\n",
+      "Models Storage: Distributed Storage (scalable, unavailable)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "poai_blockchain = Blockchain(\"POAI Blockchain\", {\n",
+    "        \"Consensus\": empty, # leave empty\n",
+    "        \"Transactions\": poai\n",
+    "    })\n",
+    "poai_blockchain.display()\n",
+    "\n",
+    "poai_fl = FederatedLearning(\"POAI Federated Learning\", {\n",
+    "        \"Aggregation\": empty,\n",
+    "        \"Models Storage\": empty\n",
+    "    })\n",
+    "poai_fl.display()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Implementation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's have a look at how there proofs are implemented in practice. They certify that enough correct servers are storing the data and that the data is not tampered with. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We split the implementations in two parts: retreive_data, when a server gets the data from the off-chain storage system, and make_poai, when a server creates the proof of availability and integrity. f is a bound on the number of server that can crash, so if we receive a signature from at least f+1 servers, we can be sure that the data is available and not tampered with..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def retreive_data(data, hash, sign, send):\n",
+    "    return \"TODO\"\n",
+    "\n",
+    "def make_poai(data, hash, receive, f):\n",
+    "    return \"TODO\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5. Final Solution"
    ]
   }
  ],
