Setup google colab

--- a/exercise.ipynb
+++ b/exercise.ipynb
@@ -51,11 +51,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.system_base import Component, ExampleSystem\n",
+    "%load \"https://raw.githubusercontent.com/maxper4/Tuto-DSN-2025/refs/heads/master/src/system_base.py\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "empty = Component(\"Empty\", [])"
    ]
   },
@@ -68,22 +76,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Example System\n",
-      "Properties: intrinsic property, combination property 1 and 2\n",
-      "Components:\n",
-      "Component 1: Example Name (property 1, property 2)\n",
-      "Component 2: Example Name (property 1, property 2)\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "example_component = Component(\"Example Name\", [\"property 1\", \"property 2\"])\n",
     "example_system = ExampleSystem(\"Example System\", {\n",
@@ -116,20 +111,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Centralized Server (untrusted)'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from src.system_base import FederatedLearning, CentralizedServer\n",
     "\n",
@@ -147,22 +131,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Centralized Federated Learning\n",
-      "Properties: privacy-preserving\n",
-      "Components:\n",
-      "Aggregation: Empty ()\n",
-      "Models Storage: Empty ()\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "centralized_federated_learning = FederatedLearning(\"Centralized Federated Learning\", {\n",
     "        \"Aggregation\": empty,\n",
@@ -196,12 +167,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "def client_federated_learning(data, train, send):\n",
-    "    \"\""
+    "    model = train(data)\n",
+    "    send(model)"
    ]
   },
   {
@@ -213,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,17 +210,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Centralized Server has been corrupted! It will now try to mislead the system.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "centralized_server.corrupt()"
    ]
@@ -262,25 +226,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Centralized Federated Learning\n",
-      "Properties: privacy-preserving\n",
-      "Components:\n",
-      "Aggregation: Empty ()\n",
-      "Models Storage: Empty ()\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "centralized_federated_learning.refresh()\n",
-    "centralized_federated_learning.display()"
+    "centralized_federated_learning.display() # privacy-leaking -> tampered model"
    ]
   },
   {
@@ -306,25 +257,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Blockchain Example\n",
-      "Properties: trusted\n",
-      "Components:\n",
-      "Consensus: Empty ()\n",
-      "Transactions: Empty ()\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from src.system_base import Blockchain\n",
-    "\n",
     "blockchain = Blockchain(\"Blockchain Example\", {\n",
     "        \"Consensus\": empty,\n",
     "        \"Transactions\": empty\n",
@@ -362,6 +298,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Properties\n",
+    "We replace the centralized server with a blockchain. This decentralized ledger will store the aggregated model and the updates from the clients in a decentralized manner, enhancing the reliability of the system."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Exercise 1 slides"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Limitations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 4. Off-chain Data"
    ]
   },
@@ -389,23 +347,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Distributed Storage (scalable, unavailable)'"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from src.system_base import DistributedStorage\n",
-    "\n",
     "distributed_storage = DistributedStorage()\n",
     "distributed_storage.info()"
    ]
@@ -421,22 +366,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "External Storage Federated Learning\n",
-      "Properties: scalable, trusted, unavailable, privacy-preserving\n",
-      "Components:\n",
-      "Aggregation: Blockchain Example (trusted)\n",
-      "Models Storage: Distributed Storage (scalable, unavailable)\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "external_storage_fl = FederatedLearning(\"External Storage Federated Learning\", {\n",
     "        \"Aggregation\": empty,\n",
@@ -454,11 +386,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
-    "poai = Component(\"POAI\", [\"data-available\"])"
+    "poai = Component(\"POAI\", [\"data-available\"]) # POAI -> Certificate"
    ]
   },
   {
@@ -470,29 +402,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "POAI Blockchain\n",
-      "Properties: data-available, trusted\n",
-      "Components:\n",
-      "Consensus: Empty ()\n",
-      "Transactions: POAI (data-available)\n",
-      "\n",
-      "hey\n",
-      "POAI Federated Learning\n",
-      "Properties: privacy-preserving, scalable, trusted, available\n",
-      "Components:\n",
-      "Aggregation: POAI Blockchain (data-available, trusted)\n",
-      "Models Storage: Distributed Storage (scalable, unavailable)\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "poai_blockchain = Blockchain(\"POAI Blockchain\", {\n",
     "        \"Consensus\": empty, # leave empty\n",
@@ -530,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
